--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   "dependencies": {
     "@electron-toolkit/preload": "^2.0.0",
     "@electron-toolkit/utils": "^1.0.2",
-    "node-gyp": "^9.4.0",
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
@@ -39,6 +38,7 @@
     "eslint": "^8.44.0",
     "eslint-plugin-vue": "^9.15.1",
     "less": "^4.1.3",
+    "naive-ui": "^2.34.4",
     "prettier": "^2.8.8",
     "typescript": "^5.1.6",
     "vite": "^4.4.2",
