--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@electron-toolkit/preload": "^2.0.0",
     "@electron-toolkit/utils": "^1.0.2",
+    "date-fns": "^2.30.0",
     "exceljs": "^4.3.0",
     "sqlite3": "^5.1.6"
   },
