--- a/package.json
+++ b/package.json
@@ -46,5 +46,11 @@
     "vite": "^4.4.2",
     "vue": "^3.3.4",
     "vue-tsc": "^1.8.4"
+  },
+  "pnpm": {
+    "overrides": {
+      "semver@>=7.0.0 <7.5.2": ">=7.5.2",
+      "minimatch@<3.0.5": ">=3.0.5"
+    }
   }
 }
